--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -10,7 +10,9 @@ $color-text-light: #ffffff;
 $color-text-muted: #777777;       
 $color-accent: #ff3f31;           
 $frontend-color: #ff6f61;
-$backend-color: #4c8bf5;
-$database-color: #7ccf4d;
-$devops-color: #f5b14c;
-$design-color: #bb55ff;
+$backend-color: #222222;
+$database-color: #ff6f61;
+$devops-color: #222222;
+$mobile-color: #ff6f61;
+$design-color: #222222;
+$cms-color: #ff6f61;
