--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -25,12 +25,13 @@ $color-accent: #ff3f31;
 
 // ===== CATEGORÍAS (manteniendo contraste en ambos modos) =====
 $frontend-color: #ff6f61;  
-$backend-color: #222222;  
-$database-color: #ff6f61;
-$devops-color: #222222;
-$mobile-color: #ff6f61;
-$design-color: #222222;
-$cms-color: #ff6f61;
+$backend-color: #222222;
+$qa-color: #ff6f61;
+$database-color: #222222;
+$devops-color: #ff6f61;
+$mobile-color: #222222;
+$design-color: #ff6f61;
+$cms-color: #222222;
 
 // ===== MAPS (opcional) para cambiar tema dinámicamente =====
 $theme-light: (
