--- a/assets/sass/components/_hero.scss
+++ b/assets/sass/components/_hero.scss
@@ -24,9 +24,9 @@
 
   p {
     margin: 10px 0;
-
+    color: $light-muted;
     .dark-mode & {
-      color: $dark-text;
+      color: $dark-muted;
     }
   }
 }
