feat: clean up sass structure and update component styles

--- a/assets/sass/base/_global.scss
+++ b/assets/sass/base/_global.scss
@@ -1,6 +1,7 @@
 /* ===========================
    BODY GLOBAL
 =========================== */
+@use '../abstracts/variables' as *;
 
 body {
   font-family: Arial, Helvetica, sans-serif;
