--- a/assets/sass/components/_skills.scss
+++ b/assets/sass/components/_skills.scss
@@ -1,6 +1,7 @@
 /* ----------------------------------------------------
    ACCORDION SKILLS
 ---------------------------------------------------- */
+@use '../abstracts/variables' as *;
 
 #skillsAccordion {
   .accordion-item {
