--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -1,3 +1,6 @@
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+
 .footer {
   background-color: $light-background;
   padding: 2rem;
