--- a/assets/sass/components/_proyectos.scss
+++ b/assets/sass/components/_proyectos.scss
@@ -1,6 +1,7 @@
-.proyecto {
+@use '../abstracts/index' as *;
+
+.proyectos {
   margin-bottom: 20px;
-  text-align: center;
 
   h3 {
     margin: 10px 0 5px;
